--- a/SASS/_main.scss
+++ b/SASS/_main.scss
@@ -96,6 +96,7 @@
 
     .jumbotron__texto{
         font-size: $f-medium;
+        padding: 1em;
     }
 
     .jumbotron__button{
@@ -105,6 +106,7 @@
         height: auto;
         width: auto;        
         margin-bottom: $spacing;
+        
     }
 
     img{
@@ -205,10 +207,13 @@
         background-color: $white;
     }
     
-    .container_table{
+    .container__table{
         display: flex;        
-        justify-content: center;
+        justify-content: space-between;
         margin-bottom: $spacing-lg;
+        padding-left: 2em;
+        padding-right: 2em;
+        overflow-x: auto;
     }
 
     .tecnicas1__table {
@@ -236,6 +241,8 @@
     .tecnicas2__videos{
         width: $full-width;
         background-color: $white;
+        padding-left: 2em;
+        padding-right: 2em;
         
     }
 
@@ -268,8 +275,7 @@
 /* Fin seccion técnicas */
 
 /* Inicio seccion ubicacion */
-.main__container {    
-        
+.main__container {          
     background-color: $white;
     
 }
@@ -282,24 +288,10 @@
 
 .container__button{
     display: flex;
-    justify-content: center;
-    width: 8%;
-    background-color: $blue-light;
-    font-size: $f-large;
-    margin-left:$spacing-lg*2.5;
-    margin-top: $spacing-lg;
-    margin-bottom: $spacing-lg;
+    justify-content: center;    
+    background-color: $blue-light;        
     color: $white;  
 }
-
-
-.collapse{ 
-    width: 100%;
-    margin-left: $spacing-lg;
-    margin-top: $spacing-sm;
-    margin-bottom: $spacing-lg;
-}
-
 
 .container__mapa{
   display: flex;
